--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 # select-nrepl
 
-A Clojure library designed to ... well, that part is up to you.
+Text-object support for your editor as nREPL middleware. 
 
 ## Usage
 
@@ -8,7 +8,7 @@ FIXME
 
 ## License
 
-Copyright © 2019 FIXME
+Copyright © 2019 Jason M. Felice
 
 This program and the accompanying materials are made available under the
 terms of the Eclipse Public License 2.0 which is available at
